# qq2

./: .gitignore  INTEGRATION_GUIDE.md  README.md  kylin-installer-design.md
.github/: BACKUP_BUILD_GUIDE.md  WORKFLOWS_GUIDE.md
.github/workflows/: build-apk-eas.yml  build-apk.yml  build-deb.yml  build-release.yml  main.yml
kylin-software-downloader/: app.config.ts  design.md  eas.json  package-lock.json  package.json  theme.config.js  todo.md
kylin-software-downloader/app/: _layout.tsx  download.tsx  packages.tsx  settings.tsx  source-form.tsx  sources.tsx
kylin-software-downloader/app/(tabs)/: index.tsx
kylin-software-downloader/constants/: oauth.ts
kylin-software-downloader/lib/contexts/: download-context.tsx
kylin-software-installer/: ARCHITECTURE.md  CMakeLists.txt  README.md
kylin-software-installer/resources/: kylin-software-installer.desktop
kylin-software-installer/src/: completescreen.cpp  completescreen.h  dependencyanalyzer.cpp  dependencyanalyzer.h  dependencyscreen.cpp  dependencyscreen.h  installscreen.cpp  installscreen.h  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  packageinfoscreen.cpp  packageinfoscreen.h  packagemanager.cpp  packagemanager.h  packageparser.cpp  packageparser.h  welcomescreen.cpp  welcomescreen.h
